# power_funding

./: README.md  SOURCE.md  compose.yaml  package-lock.json  package.json
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/: constants.ts  db.ts  mocks.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/donations/: route.ts
frontend/src/app/api/project/: route.ts
frontend/src/app/api/projects/: route.ts
frontend/src/app/my-profile/: page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/components/: golem-logo.tsx  latest-donations.tsx  projects.tsx  providers.tsx  single-project.tsx  topbar.tsx
frontend/src/components/modals/: add-project-modal.tsx  donate-modal.tsx
frontend/src/contracts/: glmAbi.ts  lockAbi.ts
frontend/src/lib/: utils.ts
indexer/: .gitignore  Cargo.toml  rust.dockerfile
indexer/migrations/: 00001_init_schema.up.sql
indexer/src/: config.rs  db.rs  event.rs  main.rs  transaction.rs
