[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
ethers = { version = "2.0", features = ["ws"]}
serde_json = "1.0.128"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
futures = "0.3"
